[metadata]
name = DellTempestPlugin
summary = Tempest plugin to test Dell PowerStore Cinder failover functionality
author = Dell OpenStack Team
license = Apache-2.0
home-page = https://git.internal.dell.com/openstack/dell-tempest-plugin

[options]
packages = find:
include_package_data = True
zip_safe = False

[entry_points]
tempest.test_plugins =
    dell-tempest-plugin = dell_tempest_plugin.plugin:DellTempestPlugin